default song added

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node node_modules/webpack/bin/webpack.js --config=js/scripts/webpack.config.js"
+    "build":
+      "node node_modules/webpack/bin/webpack.js --config=js/scripts/webpack.config.js",
+    "build:watch":
+      "node node_modules/webpack/bin/webpack.js --config=js/scripts/webpack.config.js -w"
   },
   "repository": {
     "type": "git",
