--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
@@ -13,14 +14,14 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":
-      "node node_modules/webpack/bin/webpack.js --config=abc2ireal/js/scripts/webpack.config.js",
-    "build:watch":
-      "node node_modules/webpack/bin/webpack.js --config=abc2ireal/js/scripts/webpack.config.js -w"
+    "build": "node node_modules/webpack/bin/webpack.js --config=ireal-text-editor/js/scripts/webpack.config.js",
+    "build:watch": "node node_modules/webpack/bin/webpack.js --config=ireal-text-editor/js/scripts/webpack.config.js -w",
+    "start:dev": "node_modules/.bin/webpack-dev-server --progress --colors --hot --inline --config=ireal-text-editor/js/scripts/webpack.config.dev.js"
   },
   "repository": {
     "type": "git",
