--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node node_modules/webpack/bin/webpack.js --config=ireal-text-editor/js/scripts/webpack.config.js",
-    "build:watch": "node node_modules/webpack/bin/webpack.js --config=ireal-text-editor/js/scripts/webpack.config.js -w",
-    "start:dev": "node_modules/.bin/webpack-dev-server --progress --colors --config=ireal-text-editor/js/scripts/webpack.config.dev.js"
+    "build": "node node_modules/webpack/bin/webpack.js --config=ireal-text-editor/scripts/webpack.config.js",
+    "build:watch": "node node_modules/webpack/bin/webpack.js --config=ireal-text-editor/scripts/webpack.config.js -w",
+    "start:dev": "node_modules/.bin/webpack-dev-server --progress --colors --config=ireal-text-editor/scripts/webpack.config.dev.js"
   },
   "repository": {
     "type": "git",
