--- a/ireal-text-editor/scripts/config/firebase.json
+++ b/ireal-text-editor/scripts/config/firebase.json
@@ -1,6 +1,6 @@
 {
     "production": {
-        "authDomain": "zawiasam.github.io"
+        "authDomain": "zawiasam.github.io/ireal-text-editor/"
     },
     "develop": {
         "authDomain": "localhost"
