--- a/ireal-text-editor/scripts/config/firebase.json
+++ b/ireal-text-editor/scripts/config/firebase.json
@@ -1,8 +1,18 @@
 {
-    "production": {
-        "authDomain": "zawiasam.github.io"
-    },
-    "develop": {
-        "authDomain": "localhost"
-    }
+  "production": {
+    "authDomain": "ireal-text-editor.firebaseapp.com",
+    "apiKey": "AIzaSyDuFMhGDCnLynLD-HLg5gzDY1x1-KZpssg",
+    "databaseURL": "https://ireal-text-editor.firebaseio.com",
+    "projectId": "ireal-text-editor",
+    "storageBucket": "ireal-text-editor.appspot.com",
+    "messagingSenderId": "1060242801088"
+  },
+  "develop": {
+    "authDomain": "ireal-text-editor.firebaseapp.com",
+    "apiKey": "AIzaSyDuFMhGDCnLynLD-HLg5gzDY1x1-KZpssg",
+    "databaseURL": "https://ireal-text-editor.firebaseio.com",
+    "projectId": "ireal-text-editor",
+    "storageBucket": "ireal-text-editor.appspot.com",
+    "messagingSenderId": "1060242801088"
+  }
 }
