--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
+    "@types/material-ui": "^0.20.4",
+    "@types/react": "^16.0.34",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -15,7 +18,10 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
+    "firebase": "^4.9.0",
     "html-webpack-plugin": "^2.30.1",
+    "ts-loader": "^3.3.0",
+    "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0"
   },
