redux developing first action

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zawiasam.github.io",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "dependencies": {
     "material-ui": "^0.20.0",
@@ -11,6 +12,9 @@
     "@types/firebase": "^3.2.1",
     "@types/material-ui": "^0.20.4",
     "@types/react": "^16.0.34",
+    "@types/react-redux": "^5.0.14",
+    "@types/redux": "^3.6.0",
+    "@types/redux-immutable-state-invariant": "^2.0.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -20,6 +24,9 @@
     "clean-webpack-plugin": "^0.1.17",
     "firebase": "^4.9.0",
     "html-webpack-plugin": "^2.30.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-immutable-state-invariant": "^2.1.0",
     "ts-loader": "^3.3.0",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0",
@@ -40,5 +47,9 @@
   "bugs": {
     "url": "https://github.com/zawiasam/zawiasam.github.io/issues"
   },
-  "homepage": "https://github.com/zawiasam/zawiasam.github.io#readme"
+  "homepage": "https://github.com/zawiasam/zawiasam.github.io#readme",
+  "workspaces": [
+    "ireal-text-editor/app/src/modules/**",
+    "src/models/*"
+  ]
 }
