--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "@firebase/app-types": "^0.1.1",
     "@types/firebase": "^3.2.1",
     "@types/material-ui": "^0.20.4",
     "@types/react": "^16.0.34",
     "@types/react-redux": "^5.0.14",
-    "@types/redux": "^3.6.0",
     "@types/redux-immutable-state-invariant": "^2.0.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
