--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node node_modules/webpack/bin/webpack.js --config=ireal-text-editor/scripts/webpack.config.js",
-    "build:watch": "node node_modules/webpack/bin/webpack.js --config=ireal-text-editor/scripts/webpack.config.js -w",
+    "build": "node node_modules/webpack/bin/webpack.js --config=ireal-text-editor/scripts/webpack.config.prod.js",
+    "build:watch": "node node_modules/webpack/bin/webpack.js --config=ireal-text-editor/scripts/webpack.config.prod.js -w",
     "start": "node_modules/.bin/webpack-dev-server --progress --colors --config=ireal-text-editor/scripts/webpack.config.dev.js"
   },
   "repository": {
