--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
+    "file-loader": "^1.1.6",
     "firebase": "^4.9.0",
     "html-webpack-plugin": "^2.30.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-immutable-state-invariant": "^2.1.0",
+    "svg-react-loader": "^0.4.5",
     "ts-loader": "^3.3.0",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0",
