--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-immutable-state-invariant": "^2.1.0",
     "svg-react-loader": "^0.4.5",
     "ts-loader": "^3.3.0",
+    "tslint": "^5.9.1",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0"
