--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^4.9.0",
     "html-webpack-plugin": "^2.30.1",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "svg-react-loader": "^0.4.5",
