--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "description": "",
   "dependencies": {
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.31",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "@firebase/app-types": "^0.1.1",
+    "@firebase/firestore": "^0.3.1",
     "@types/firebase": "^3.2.1",
-    "@types/material-ui": "^0.20.4",
     "@types/react": "^16.0.34",
     "@types/react-redux": "^5.0.14",
     "@types/redux-immutable-state-invariant": "^2.0.4",
