--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "dependencies": {
     "material-ui": "^1.0.0-beta.31",
+    "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
