--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/firebase": "^3.2.1",
     "@types/react": "^16.0.34",
     "@types/react-redux": "^5.0.14",
+    "@types/react-router-dom": "^4.2.3",
     "@types/redux-immutable-state-invariant": "^2.0.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
