--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "svg-react-loader": "^0.4.5",
     "ts-loader": "^3.3.0",
     "tslint": "^5.9.1",
+    "tslint-config-prettier": "^1.9.0",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0"
