--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "@firebase/app": "^0.1.10",
     "@firebase/app-types": "^0.1.1",
     "@firebase/firestore": "^0.3.1",
-    "@types/firebase": "^3.2.1",
     "@types/react": "^16.0.34",
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
