--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@firebase/app-types": "^0.1.1",
     "@firebase/firestore": "^0.3.1",
     "@types/react": "^16.0.34",
+    "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "@types/redux-immutable-state-invariant": "^2.0.4",
