--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "firebase": "^4.9.0",
     "html-webpack-plugin": "^2.30.1",
@@ -33,6 +35,7 @@
     "redux": "^3.7.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.2.0",
+    "style-loader": "^0.20.3",
     "svg-react-loader": "^0.4.5",
     "ts-loader": "^3.3.0",
     "tslint": "^5.9.1",
